<resources>
    <string name="app_name">DrawerSample</string>
    <string name="header_title">Header Title</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="chat">Chat</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
</resources>
