<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item android:id="@+id/action_logout"
              android:title="@string/logout"
              android:icon="@drawable/ic_chat"/>

        <item android:id="@+id/action_email"
              android:title="@string/email"
              android:icon="@drawable/ic_share"/>

        <item android:id="@+id/action_chat"
              android:title="@string/chat"
              android:icon="@drawable/ic_chat"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/action_share"
                    android:title="@string/share"
                  android:icon="@drawable/ic_share"/>

            <item android:id="@+id/action_send"
                  android:title="@string/send"
                  android:icon="@drawable/ic_send" />
        </menu>
    </item>
</menu>